add log endpoint & gen files
